--- a/package.xml
+++ b/package.xml
@@ -3,16 +3,28 @@
 <package format="3">
   <name>sky_vision2</name>
   <version>0.0.1</version>
-  <description>TODO: Package description</description>
-  <maintainer email="hfcaio@gmail.com">Caio Hokama Freitas</maintainer>
-  <license>TODO: License declaration</license>
+  <description>skyrats ros2 package for computer vision</description>
+  <maintainer email="hfcaio@gmail.com">hfcaio</maintainer>
+  <license>MIT</license>
 
-  <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+
+  <depend>rclcpp</depend>
+  <depend>rclpy</depend>
+
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  
+  <depend>cv_bridge</depend>
+  <depend>opencv</depend>
+  <depend>image_transport</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend> 
 
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
